@@ -2,12 +2,12 @@
 
 $(document).ready(function(){
 	$("input[name='ftp_enabled']").change(function() {
-		if($("input[name='ftp_enabled']").attr('checked')) {
+		if($("input[name='ftp_enabled']").not(':disabled').is(':checked') ) {
 			$("input[name='anon_ftp']").attr('disabled',false);
 		} else {
 			$("input[name='anon_ftp']").attr('disabled',true);
 		}
-	});
+	}).change();
 
 	$("input[type='submit']").click( function () {
 		$("input").attr("disabled","disabled");
